--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -59,22 +59,22 @@
     <link rel=”canonical” href=”https://www.ictiva.com/ejercicios-yoga” />
 
     <!--Icon, favicon & webapp -->
-    <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="homes/img/favicon.ico" type="image/x-icon"/>
-    <link rel="icon" href="homes/img/favicon.ico" type="image/ico"/>
+    <link rel="shortcut icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/homes/img/favicon.ico" type="image/ico"/>
 
     <!-- Bootstrap core CSS -->
-    <link href="homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="homes/css/magnific-popup.min.css" rel="stylesheet">
+    <link href="/homes/css/magnific-popup.min.css" rel="stylesheet">
 
-    <link href="homes/css/custom.min.css" rel="stylesheet">
+    <link href="/homes/css/custom.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -129,7 +129,7 @@
     }
     @media (max-width: 767px){
         header.bg-landing{        
-            background-image: url(homes/img/img-landing/yoga_portada-movil.jpg);
+            background-image: url(/homes/img/img-landing/yoga_portada-movil.jpg);
             background-position: top center;
             background-size: cover;
             min-height: 90vh;
@@ -259,28 +259,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row px-5 py-4">
                 <div class="col-12 col-md-3 text-center">
                     <div class="mt-3">
-                        <img src="homes/img/img-landing/iconos/localizacion_icon.png" class="sr-icons mb-3" alt="Donde quieras" height="80px" width="auto">
+                        <img src="/homes/img/img-landing/iconos/localizacion_icon.png" class="sr-icons mb-3" alt="Donde quieras" height="80px" width="auto">
                         <h4 class="h4">DONDE QUIERAS</h3>
                         <!-- <p class="text-muted">Acceso ilimitado donde quieras y a la hora que quieras.</p> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-3 text-center">
                     <div class="mt-3">
-                        <img src="homes/img/img-landing/iconos/reloj_icon.png" class="sr-icons mb-3" alt="Cuando quieras" height="80px" width="auto">
+                        <img src="/homes/img/img-landing/iconos/reloj_icon.png" class="sr-icons mb-3" alt="Cuando quieras" height="80px" width="auto">
                         <h4 class="h4">CUANDO QUIERAS</h3>
                         <!-- <p class="text-muted">Clases dirigidas con ejercicios de 21 disciplinas diferentes.</p> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-3 text-center">
                     <div class="mt-3">
-                        <img src="homes/img/img-landing/iconos/play_icon.png" class="sr-icons mb-3" alt="Las veces que quieras" height="80px" width="auto">
+                        <img src="/homes/img/img-landing/iconos/play_icon.png" class="sr-icons mb-3" alt="Las veces que quieras" height="80px" width="auto">
                         <h4 class="h4">LAS VECES QUE QUIERAS</h3>
                         <!-- <p class="text-muted">5 niveles de dificultad para adaptarse a tu forma física.</p> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-3 text-center">
                     <div class="mt-3">
-                        <img src="homes/img/img-landing/iconos/infinito_icon.png" class="sr-icons mb-3" alt="acceso ilimitado" height="80px" width="auto">
+                        <img src="/homes/img/img-landing/iconos/infinito_icon.png" class="sr-icons mb-3" alt="acceso ilimitado" height="80px" width="auto">
                         <h4 class="h4">ACCESO ILIMITADO</h3>
                         <!-- <p class="text-muted">5 niveles de dificultad para adaptarse a tu forma física.</p> -->
                     </div>
@@ -310,7 +310,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">CLASES DE YOGA ONLINE</h2>
@@ -328,7 +328,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt=""></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">EJERCICIOS DE YOGA EN CASA</h2>
@@ -344,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt=""></div>
 
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
@@ -377,7 +377,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES</h2>
@@ -540,8 +540,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container-fluid">
         <div class="row text-center py-4">
             <div class="col">
-                <img src="homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
-                <img src="homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
+                <img src="/homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
+                <img src="/homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
             </div>
         </div>
     </div>
@@ -554,22 +554,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="homes/vendor/jquery/jquery.min.js"></script>
-    <script src="homes/vendor/tether/tether.min.js"></script>
-    <script src="homes/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/homes/vendor/jquery/jquery.min.js"></script>
+    <script src="/homes/vendor/tether/tether.min.js"></script>
+    <script src="/homes/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="homes/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="homes/vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="/homes/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/homes/vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="/homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
     
     <!-- Fontawesome Icons -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="homes/js/creative.min.js"></script>
+    <script src="/homes/js/creative.min.js"></script>
 
-    <script src="homes/js/tutorial.min.js"></script>
+    <script src="/homes/js/tutorial.min.js"></script>
 
     <script> 
      $('.navbar-nav>li>a').on('click', function(){
