--- a/landing-ictiva-3-original.html
+++ b/landing-ictiva-3-original.html
@@ -146,6 +146,29 @@
         .text-medium{
             font-size: 1.25rem;
         }
+        .extra-lg h1.display-4{
+            font-size: 5rem;
+            padding-bottom: 2.2rem;
+        }
+        .extra-lg p, .extra-lg a{
+            font-size: 2rem;
+        }
+        .extra-lg h2{
+            font-size: 2rem;
+        }
+        .extra-lg a.btn-scroll{
+            font-size: 1.1rem;
+        }
+        .extra-lg li{
+            font-size: 1.6rem;
+        }
+        .widget-home{
+            width: 475px;
+            margin-right: 3rem;
+        }
+        .line-height-2{
+            line-height: 3.5rem;
+        }
     }
     </style>
 
@@ -173,7 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a class="navbar-brand ml-5 ml-lg-0" href="#page-top">
                         <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
                     </a>
-                    <div class="collapse navbar-collapse" id="navbarExample">
+                    <div class="collapse navbar-collapse extra-lg" id="navbarExample">
                         <ul class="navbar-nav m-auto">
                             <li class="nav-item active">
                                 <a class="nav-link px-2 text-uppercase mt-3 mt-sm-0" href="/">Gimnasio <span class="sr-only">(current)</span></a>
@@ -215,16 +238,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <header class="bg-landing d-flex align-items-center justify-content-center section-header-video">
         <div class="row align-items-center m-0 w-100 bg-video mb-0 mt-5 px-5">
-                <div class="col-12 col-md-6 col-lg-7 py-3">
+                <div class="col-12 col-md-6 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">Hacer Yoga en casa</h1>
-                    <p class="text-white h5 pb-lg-4">Aprende a realizar ejercicios de yoga en casa correctamente con nuestras videosesiones.</p>
+                    <p class="text-white pb-lg-4">Aprende a realizar ejercicios de yoga en casa correctamente con nuestras videosesiones.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Yoga online con ictiva</h2>
                     <p class="text-white text-medium mb-5">Aprende a hacer Yoga en casa, la disciplina milenaria por excelencia que armoniza el cuerpo y la mente. Con ictiva disfrutarás de la práctica del Yoga online y te convertirás en un auténtico Yogui.</p>
                     <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
-                <div class="col-12 col-md-5 py-3 d-none d-sm-block hidden-sm-down">
+                <div class="col-12 col-md-5 py-3 d-none extra-lg d-sm-block hidden-sm-down">
                     <div class="widget-home float-right">
-                        <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Beneficios de practicar Yoga:</p>
+                        <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Beneficios del Yoga:</p>
                         <ul class="bg-lightgrey m-auto py-3 pl-4">
                             <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Logra una buena condición física.</li>
                             <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Pierde peso y estiliza tu figura.</li>
@@ -236,8 +259,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>                
                     </div>
                 </div>
-                <div class="col-12 pt-2 text-center">
-                    <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4">Descubre la sala de Yoga<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
+                <div class="col-12 pt-2 extra-lg text-center">
+                    <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4 btn-scroll">Descubre la sala de Yoga<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
                 </div>
             </div>
         </div>
@@ -251,7 +274,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="container-fluid">
         <div class="row d-flex justify-content-center">
             <div class="col-12 col-sm-8 py-3 px-3 d-md-none hidden-md-up">
-                <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Los ejercicios de Yoga tienen mucho que ofrecerte:</p>
+                <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Beneficios del Yoga:</p>
                 <ul class="bg-lightgrey m-auto py-3 pl-4">
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Logra una buena condición física.</li>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Pierde peso y estiliza tu figura.</li>
