--- a/landing-ictiva-3.html
+++ b/landing-ictiva-3.html
@@ -100,6 +100,9 @@
     }
     .pl-6{
         padding-left: 4.5rem;
+    }    
+    .pr-6{
+        padding-right: 4.5rem;
     }
     .bg-primary-light {
       background: rgba(247,170,69,1) !important;
@@ -123,9 +126,6 @@
         nav > .container {
             width: 100%;
         }
-        .text-medium{
-            font-size: 1.25rem;
-        }
     }
     @media (max-width: 767px){
         header.bg-landing{        
@@ -133,6 +133,57 @@
             background-position: top center;
             background-size: cover;
             min-height: 90vh;
+        }
+        header.bg-landing:before{
+            min-height: 90vh;
+        }
+    }
+    @media (min-width: 1281px) {
+        .text-medium{
+            font-size: 1.25rem;
+        }
+    }
+    @media (min-width: 1680px){
+        .container {
+            width: 1620px;
+            max-width: 100%;
+        }
+        .extra-lg h1.display-4{
+            font-size: 4rem;
+            padding-bottom: 2.2rem!important;
+        }
+        .extra-lg p, .extra-lg a{
+            font-size: 1.8rem;
+            line-height: 2.4rem;
+        }
+        .extra-lg h2{
+            font-size: 2rem;
+        }
+        /*.extra-lg a.btn-scroll{
+            font-size: 1.1rem;
+        }*/
+        .extra-lg li{
+            font-size: 1.6rem;
+        }
+        .widget-home{
+            width: 475px;
+            margin-right: 3rem;
+        }
+        .widget-home p.px-4,.widget-home ul.pl-4{
+            padding-left: 2.5rem!important;
+        }
+        .widget-home p.py-3{
+            padding-top: 1.5rem!important;
+            padding-bottom:  1.5rem!important;
+        }
+        .line-height-2{
+            line-height: 4rem;
+        }
+        .btn-scroll .pt-2{
+            padding-top: 6rem!important;
+        }
+        .btn-scroll a{
+            font-size: 1.3rem;
         }
     }
     </style>
@@ -158,7 +209,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <span class="navbar-bg-icon"></span>
                 </button>
                 <div class="container pl-lg-0">
-                    <a class="navbar-brand ml-5 ml-lg-0" href="#page-top">
+                    <a class="navbar-brand ml-5 ml-lg-3" href="#page-top">
                         <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
                     </a>
                     <div class="collapse navbar-collapse" id="navbarExample">
@@ -203,18 +254,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <header class="bg-landing pt-4 mt-5 d-flex justify-content-center align-items-center section-header-video">
-        <div class="container bg-video">
-            <div class="row mx-0 mb-0 mt-5">
-                <div class="col-12 col-lg-6 py-3">
+        <div class="container bg-video mx-0 d-flex justify-content-center">
+            <div class="row mb-0 mt-5 px-5">
+                <div class="col-12 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">Hacer Yoga en casa</h1>
                     <p class="text-white h5 pb-lg-4">Aprende a realizar ejercicios de yoga en casa correctamente con nuestras videosesiones.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Yoga online con ictiva</h2>
-                    <p class="text-white text-medium mb-5">Aprende a hacer Yoga en casa, la disciplina milenaria por excelencia que armoniza el cuerpo y la mente. Con ictiva disfrutarás de la práctica del Yoga online y te convertirás en un auténtico Yogui.</p>
+                    <p class="text-white text-medium mb-5">Quieres hacer Yoga en casa, la disciplina milenaria por excelencia que armoniza el cuerpo y la mente? Con ictiva disfrutarás de la práctica del Yoga online y te convertirás en un auténtico Yogui.</p>
                     <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
-                <div class="col-12 col-md-6 py-3 pl-6 d-none d-md-block hidden-md-down">
+                <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
-                        <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Beneficios de practicar Yoga:</p>
+                        <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Beneficios del Yoga:</p>
                         <ul class="bg-lightgrey m-auto py-3 pl-4">
                             <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Logra una buena condición física.</li>
                             <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Pierde peso y estiliza tu figura.</li>
@@ -226,7 +277,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>                
                     </div>
                 </div>
-                <div class="col-12 pt-2 text-center">
+                <div class="col-12 btn-scroll pt-2 text-center">
                     <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4">Descubre la sala de Yoga<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
                 </div>
             </div>
@@ -239,8 +290,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-12 py-3 px-3 d-md-none hidden-sm-up">
-                <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Los ejercicios de Yoga tienen mucho que ofrecerte:</p>
+            <div class="col-12 py-3 px-3 extra-lg d-md-none hidden-sm-up">
+                <p class="bg-darkgrey text-white text-uppercase font-weight-bold h4 m-0 py-3 px-4">Beneficios del Yoga:</p>
                 <ul class="bg-lightgrey m-auto py-3 pl-4">
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Logra una buena condición física.</li>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Pierde peso y estiliza tu figura.</li>
@@ -390,7 +441,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </section>
-    <section class="no-padding">
+    <!-- <section class="no-padding">
         <div class="container-fluid banner-primary">
             <div class="row py-3 text-white">
                 <div class="col-lg-12 text-center">
@@ -398,7 +449,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <section class="text-white bg-dark p-5 footer-list">
