--- a/clases-yoga.html
+++ b/clases-yoga.html
@@ -270,10 +270,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row mb-0 mt-5 px-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">Clases de Yoga</h1>
-                    <p class="text-white h5 pb-lg-4">Iníciate en el mundo del Yoga con nuestras clases virtuales. Cuida tu cuerpo y tu mente desde hoy mismo.</p>
-                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Clases de Yoga online donde y cuando quieras</h2>
-                    <p class="text-white text-medium mb-5">Con nuestras clases de Yoga en casa de ictiva tu gimnasio online, aprenderás a realizar desde los ejercicios más básicos para principiantes, a asanas más avanzadas para aquellos que ya conocen esta disciplina milenaria.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="text-white h5 pb-lg-4">Iníciate en el mundo del Yoga con nuestras clases virtuales.</p>
+                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Clases de Yoga online.</h2>
+                    <p class="text-white text-medium mb-5">Con nuestras clases de Yoga en casa de ictiva, aprenderás a realizar desde ejercicios básicos a asanas más avanzadas. Cuida tu cuerpo y tu mente.</p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -289,7 +289,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>                
                     </div>
                 </div>
-                <div class="col-12 btn-scroll pt-2 text-center">
+                <div class="col-12 btn-scroll pt-2 text-center d-none d-sm-block">
                     <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4">Descubre la sala de Yoga<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
                 </div>
             </div>
