--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -269,11 +269,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container bg-video mx-0 d-flex justify-content-center">
             <div class="row mb-0 mt-5 px-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
-                    <h1 class="text-white text-uppercase display-4 pb-lg-3">Hacer Yoga en casa</h1>
-                    <p class="text-white h5 pb-lg-4">Aprende a realizar ejercicios de yoga en casa correctamente con nuestras videosesiones.</p>
+                    <h1 class="text-white text-uppercase display-4 pb-lg-3">Yoga en casa</h1>
+                    <p class="text-white h5 pb-lg-4">Aprende a realizar ejercicios de yoga en casa correctamente.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Yoga online con ictiva</h2>
-                    <p class="text-white text-medium mb-5">Quieres hacer Yoga en casa, la disciplina milenaria por excelencia que armoniza el cuerpo y la mente? Con ictiva disfrutarás de la práctica del Yoga online y te convertirás en un auténtico Yogui.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="text-white text-medium mb-5">Quieres hacer Yoga en casa? Con ictiva disfrutarás de la disciplina milenaria que armoniza el cuerpo y la mente y te convertirás en un auténtico Yogui.</p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -289,8 +289,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>                
                     </div>
                 </div>
-                <div class="col-12 btn-scroll pt-2 text-center">
-                    <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4">Descubre la sala de Yoga<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
+                <div class="col-12 btn-scroll pt-2 text-center d-none d-sm-block">
+                    <p class="py-4 btn"><a data-scroll href="#pagetwo" class="text-uppercase text-white text-center m-0 py-4">Descubre la sala<br><i class="fas fa-chevron-down text-white mt-2"></a></i></p>
                 </div>
             </div>
         </div>
