--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Yoga Online:Ejercicios de Yoga para ponerte en forma desde casa</title>
+    <title>Ejercicios de Yoga Online para ponerte en forma desde casa</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
