--- a/entrenamiento-aerobico.html
+++ b/entrenamiento-aerobico.html
@@ -272,7 +272,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Ponte en forma rápidamente con los entrenamientos aeróbicos de ictiva, tu gimnasio online.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">ENTRENAMIENTO AERÓBICO EN CASA</h2>
                     <p class="text-white text-medium mb-5">¿Quieres perder esos kilos de más y no sabes cómo hacerlo? Sea cual sea tu nivel físico, ahora puedes entrenar en casa con nuestras sesiones online.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -312,7 +312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Elimina la celulitis</li>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Tonifica tu musculatura</li>
                 </ul>
-                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p> -->
+                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p> -->
             </div>
         </div>
     </section>
@@ -365,7 +365,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i><span class="text-primary">TBC:</span> el Total Body Conditioning es una actividad física focalizada en mejorar el rendimiento aeróbico, pero también es conveniente para tonificar el cuerpo. Este método de entrenamiento combina diferentes ejercicios aeróbicos y anaeróbicos.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i><span class="text-primary">Steps:</span> es una disciplina deportiva distinta a las anteriores. Originalmente está basada en el aeróbic, pero está enfocada a objetivos distintos. Las sesiones de steps se focalizan más en el desarrollo del tren inferior: glúteos, cuádriceps, gemelos…</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
@@ -383,7 +383,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Facilita la pérdida de peso: El entreno aeróbico trata de utilizar la grasa corporal como principal fuente de energía, de este modo las personas que padecen sobrepeso podrán reducir la grasa localizada.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Mejora la resistencia: Gracias a que este ejercicio aumenta la velocidad a la que el oxígeno inhalado pasa de los pulmones y el corazón al torrente sanguíneo para que lo usen los músculos. Los atletas que tienen un buen estado físico pueden ejercitarse más tiempo y tardan más tiempo en cansarse. Durante el ejercicio tienen un ritmo cardíaco más lento, una velocidad de respiración más lenta, menos fatiga muscular y más energía.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Podrás ver las calorías consumidas en cada una de las sesiones que realices completamente.</p>
                     <p class="mb-3 ls text-medium">Los minutos realizados de actividad, así como los días que has entrenado y el tipo de actividad realizada.</p>
                     <p class="mb-3 ls text-medium">También puedes llevar el control de medición de todo tu cuerpo (Piernas, caderas, abdomen, pecho, brazos..) para comprobar si tu volumen corporal ha disminuido o ha aumentado en función del objetivo que tengas.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
@@ -419,7 +419,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">A la finalización de cada vídeo te dará también una puntuación por cada sesión realizada. Estas sesiones pueden tener puntos extras a modo de medallas. Todas estas acciones u puntos se pueden compartir en RRSS lo que genera más puntos en tu casillero.</p>
                     <p class="mb-3 ls text-medium">Los 3 primeros clasificados de cada mes, tiene premio asegurado, al igual que los ganadores de cada trimestre. Puedes a ganar un viaje a una ciudad europea!</p>
                     <p class="mb-3 ls text-medium">Podrás ver todo el sistema de puntuación como funciona, los puntos que has conseguido y las clasificaciones, dentro del apartado “Motivator”</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
@@ -437,7 +437,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Pero la aplicación de ictiva no solo te permite realizar este tipo de ejercicios, sino que tienes muchas otras disciplinas que pueden complementar tus entrenos, como puede ser el Tabata, el Boxeo, Hiit….Descúbrelos!</p>
                     <p class="mb-3 ls text-medium">La aplicación de ictiva, gracias a su variedad de disciplinas (25) y sus más de 800 sesiones, así como sus rutinas o dietas, hace de ella la app de salud y bienestar más completa que hay.</p>
                     <p class="mb-3 ls text-medium">A qué esperas a empezar? Tienes más de 50 clases gratis a tu disposición!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
@@ -454,7 +454,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Comparte tu experiencia con otros usuarios, pregunta aquello que tengas duda, sigue nuestros blogs para estar informada sobre todo tema relacionado con el deporte, la salud y el bienestar. Recibe comunicaciones con contenido de valor que te motivará y te ayudará a seguir adelante en la consecución de tus metas.</p>
                     <p class="mb-3 ls text-medium">Y, ahora como novedad, te puedes unir como miembro a un grupo específico de Facebook : Usuarios que quieran tonificar y definir su cuerpo, aquellos que quieren tener un peso adecuado quemando calorías y los que están más interesados en actividades más calmadas como pueden ser el yoga o el pilates (Wellness).</p>
                     <p class="mb-3 ls text-medium">Vamos, no lo dudes, únete a uno de estos grupos y mantente más informada y motivada con lo que más te interesa a la vez que interactúas con usuarios que tienen tu misma meta.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
@@ -463,7 +463,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid banner-primary">
             <div class="row py-3 text-white">
                 <div class="col-lg-12 text-center">
-                    <p class="text-bigger p-3"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="text-bigger p-3"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
