--- a/entrenamiento-aerobico.html
+++ b/entrenamiento-aerobico.html
@@ -99,6 +99,10 @@
     header.bg-landing:before{
         min-height: 90vh;
     }
+    header.bg-landing>div{
+        width: 80%;
+        margin-left: 10%;
+    }
     .video-section{
         margin-top: -10rem;
     }
@@ -264,8 +268,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-    <header class="bg-landing pt-4 mt-5 d-block d-sm-flex justify-content-center align-items-center section-header-video">
-        <div class="container bg-video mx-0 d-flex justify-content-center">
+    <header class="bg-landing pt-4 mt-5 align-items-center section-header-video">
+        <div class="container bg-video d-block d-sm-flex justify-content-center mt-5">
             <div class="row mb-0 mt-5 px-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">ENTRENAMIENTO AERÓBICO</h1>
