--- a/ejercicios-aerobic.html
+++ b/ejercicios-aerobic.html
@@ -268,7 +268,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
 
-    <header class="bg-landing pt-4 mt-5 align-items-center section-header-video">
+    <header class="bg-landing pt-4 mt-5 align-items-center">
         <div class="container bg-video d-block d-sm-flex justify-content-center mt-5">
             <div class="row mb-0 mt-5 px-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
@@ -297,11 +297,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
-        <!-- <video autoplay loop muted class="w-100 hidden-sm-down" poster="/img/slide-home/video-main-placeholder.png">
-            <source src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="video/mp4">
-            <source src="https://www.ictiva.com/homes/video/yoga_video.webm" type="video/webm">
-            <embed src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="application/x-shockwave-flash" width="100%" height="570" allowscriptaccess="always" allowfullscreen="true" autoplay="true" showcontrols="0">
-        </video> -->
+        <video autoplay loop muted class="w-100 hidden-lg-down">
+            <source src="/videos/17-se-aerobic.webm" type="video/webm">
+            <source src="/videos/17-se-aerobic.mp4" type="video/mp4">
+            <source src="/videos/17-se-aerobic.ogv" type="video/ogg">
+            Your browser does not support HTML5 video.
+        </video>
     </header>
     <section class="container-fluid">
         <div class="row">
