--- a/ejercicios-yoga.html
+++ b/ejercicios-yoga.html
@@ -275,9 +275,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-12 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">Yoga en casa</h1>
                     <p class="text-white h5 pb-lg-4">Aprende a realizar ejercicios de yoga en casa correctamente.</p>
-                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Yoga online con ictiva</h2>
-                    <p class="text-white text-medium mb-5">Quieres hacer Yoga en casa? Con ictiva disfrutarás de la disciplina milenaria que armoniza el cuerpo y la mente y te convertirás en un auténtico Yogui.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
+                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Fuera estrés con ictiva</h2>
+                    <p class="text-white text-medium mb-5">Quieres hacer Yoga en casa? Con ictiva disfrutarás de la disciplina milenaria que armoniza el cuerpo y la mente.</p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Apúntate gratis</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
