--- a/entrenamiento-aerobico.html
+++ b/entrenamiento-aerobico.html
@@ -273,9 +273,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row mb-0 mt-5 px-4">
                 <div class="col-12 col-lg-7 extra-lg py-3">
                     <h1 class="text-white text-uppercase display-4 pb-lg-3">ENTRENAMIENTO AERÓBICO</h1>
-                    <p class="text-white h5 pb-lg-4">Ponte en forma rápidamente con los entrenamientos aeróbicos de ictiva, tu gimnasio online.</p>
-                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">ENTRENAMIENTO AERÓBICO EN CASA</h2>
-                    <p class="text-white text-medium mb-5">¿Quieres perder esos kilos de más y no sabes cómo hacerlo? Sea cual sea tu nivel físico, ahora puedes entrenar en casa con nuestras sesiones online.</p>
+                    <p class="text-white h5 pb-lg-4">Ponte en forma rápidamente con los entrenamientos de ictiva.</p>
+                    <h2 class="text-primary text-uppercase text-bigger pb-lg-4">ENTRENO AERÓBICO EN CASA</h2>
+                    <p class="text-white text-medium mb-5">¿Quieres perder esos kilos de más y no sabes cómo hacerlo? Con ictiva puedes conseguirlo!</p>
                     <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
@@ -297,11 +297,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
-        <!-- <video autoplay loop muted class="w-100 hidden-sm-down" poster="/img/slide-home/video-main-placeholder.png">
-            <source src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="video/mp4">
-            <source src="https://www.ictiva.com/homes/video/yoga_video.webm" type="video/webm">
-            <embed src="https://www.ictiva.com/homes/video/yoga_video.mp4" type="application/x-shockwave-flash" width="100%" height="570" allowscriptaccess="always" allowfullscreen="true" autoplay="true" showcontrols="0">
-        </video> -->
+        <video autoplay loop muted class="w-100 hidden-lg-down">
+            <source src="/homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="/homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
     </header>
     <section class="container-fluid">
         <div class="row">
