--- a/index.html
+++ b/index.html
@@ -305,25 +305,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-lg-6 efe-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
                         <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Efectivo</h3>
-                        <p class="lead text-white px-5 h5">800 Videosesiones dirigidas de más de 20 <a href="https://www.ictiva.com/ejercicios-en-casa/" class="text-primary font-weight-bold">disciplinas</a> diferentes. Ejercicios para hacer en casa diseñadospor nuestros Personal Trainers, con el fin de que te pongas en forma rápidamente.</p>
+                        <p class="lead text-white px-5 h5 text-shadow2">800 Videosesiones dirigidas de más de 20 <a href="https://www.ictiva.com/ejercicios-en-casa/" class="text-primary font-weight-bold">disciplinas</a> diferentes. Ejercicios para hacer en casa diseñadospor nuestros Personal Trainers, con el fin de que te pongas en forma rápidamente.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 ada-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
                         <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Adaptado a ti</h3>
-                        <p class="lead text-white px-5 h5">Sea cual sea tu sexo y condición física tenemos clases dirigidas y <a href="https://www.ictiva.com/planes-de-entrenamiento/" class="text-primary font-weight-bold">planes de entrenamiento</a> online que se adaptan a ti.</p>
+                        <p class="lead text-white px-5 h5 text-shadow2">Sea cual sea tu sexo y condición física tenemos clases dirigidas y <a href="https://www.ictiva.com/planes-de-entrenamiento/" class="text-primary font-weight-bold">planes de entrenamiento</a> online que se adaptan a ti.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 don-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
                         <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Donde y cuando quieras</h3>
-                        <p class="lead text-white px-5 h5">Un gimnasio online para hacer ejercicios en casa, en el hotel, en el gimnasio o al aire libre. Nuestros Personal Trainers te guiarán en sus videosesiones. ¡Los días que quieras, las veces que quieras!</p>
+                        <p class="lead text-white px-5 h5 text-shadow2">Un gimnasio online para hacer ejercicios en casa, en el hotel, en el gimnasio o al aire libre. Nuestros Personal Trainers te guiarán en sus videosesiones. ¡Los días que quieras, las veces que quieras!</p>
                     </div>
                 </div>
                 <div class="col-lg-6 mot-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
                         <h3 class="py-5 text-white display-4 text-uppercase text-shadow">Motivacional</h3>
-                        <p class="lead text-white px-5 h5">Nuestra herramienta "Motivator", te animará a seguir te dará puntos por cada videosesión realizada, obtendrás medallas y podrás subir en la clasificación.<br>¡Podrás ganar un viaje a una ciudad europea!</p>
+                        <p class="lead text-white px-5 h5 text-shadow2">Nuestra herramienta "Motivator", te animará a seguir te dará puntos por cada videosesión realizada, obtendrás medallas y podrás subir en la clasificación.<br>¡Podrás ganar un viaje a una ciudad europea!</p>
                     </div>
                 </div>
             </div>
