--- a/ejercicios-de-abdominales.html
+++ b/ejercicios-de-abdominales.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="language" content="es-ES" />
 
-    <title>Ejercicios de abdominales para lograr el abdomen que deseas</title>
+    <title>Ejercicios de abdominales para lograr un abdomen perfecto</title>
 
     <!-- Google Optimize -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,12 +46,12 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="En ictiva encontrarás las mejores vídeo clases de  ejercicios de abdominales para conseguir un abdomen perfecto. Pierde grasa y tonifica tu vientre con nuestras sesiones. Ya no hay excusas! Inicia Tu Entrenamiento Ahora." />
+    <meta name="description" content="Ejercicios de abdominales para conseguir un abdomen diez. Pierde grasa y tonifica tu vientre. Ya no hay excusas! Inicia Tu Entrenamiento Ahora." />
     <meta name="keywords" content="ejercicios de abdominales, ejercicios abdominales, mejores ejercicios para abdominales, rutina de ejercicios abdominales, ejercicios para tener abdominales" />
     <meta name”robots” content=”noindex,nofollow”>
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Ejercicios de abdominales para lograr el abdomen que deseas" />
-    <meta property="og:description" content="En ictiva encontrarás las mejores vídeo clases de  ejercicios de abdominales para conseguir un abdomen perfecto. Pierde grasa y tonifica tu vientre con nuestras sesiones. Ya no hay excusas! Inicia Tu Entrenamiento Ahora." />
+    <meta property="og:title" content="Ejercicios de abdominales para lograr un abdomen perfecto" />
+    <meta property="og:description" content="Ejercicios de abdominales para conseguir un abdomen diez. Pierde grasa y tonifica tu vientre. Ya no hay excusas! Inicia Tu Entrenamiento Ahora." />
     <meta property="og:url" content="https://www.ictiva.com/ejercicios-de-abdominales/" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
